Revise README for clarity and updated links
Updated project description and instructions in README.